# Taint-Analysis

./: .gitignore  .gitmodules  README.md
Code/: naiveInference_filter.py  naiveInference_loop.py  naiveInference_main.py  naiveInference_np.py  naiveInference_score.py
Code/AntiBayesian/: graph.hy
Code/AntiBayesian/InferenceEngine/: .ocamlinit  dune-project
Code/BayesianNetwork/: .gitignore  BayesianNetwork_BasicCPT.py  BayesianNetwork_filter.py  BayesianNetwork_loop.py  BayesianNetwork_main.py  BayesianNetwork_z3.py  CPT_lookup_table.csv  basic_CPT.py  blacklist_nodes.py  cleanup.sh  community_detection.py  create_edge.py  create_node.py  deal_with_poor_nodes.py  deal_with_poor_nodes_new.py  deal_with_rich_nodes.py  exploration.py  extra_features.py  extract_id.py  feature_extractor.py  filter.py  find_jar.py  graph_contraction.py  graph_search_prototype.py  hack_the_structure.py  java_builtin_collections.txt  java_builtin_types.txt  java_builtins.py  justify_parameters.py  loop.py  main.py  main.sh  make_BN.py  make_CPT.py  make_CPT_lookup_table.py  make_underlying_graph.py  no_symmetry.py  pairwise_similarity.py  pairwise_similarity_swan.py  paths.json  (+16 more)
Code/BayesianNetwork/solutions/: generate_solution.py  solution_WhatIWantExample.json  (+7 more)
Code/benchmarks/: WhatIWantExample.java
Code/for_SWAN/: .gitignore  pick_training_set.py
Code/infer/: .gitignore  .ocamlinit  HEAD.txt  build-infer.sh
Code/infer/infer/src/repl/: Repl.ml  dune
Code/infer/infer/src/spechunter/: CallGraph.ml  ExtractAnnotations.ml  GetterSetter.ml  LiveRange.ml  MyCallGraph.ml  Partitioners.ml  RefineSummaries.ml  ReturnStatementLines.ml  SetofAllMeths.ml  SpecHunter.ml  SpecHunterUtils.ml  SummaryLoader.ml  TestCodeDetector.ml  dune
Code/infer/infer/src/swan/: CountAPIs.ml  MyCallGraph.ml  SetofAllMeths.ml  SummaryLoader.ml  SwanFeatureExtractor.ml  dune
Code/naiveInference/: edges.csv  id.csv  naiveInference_filter.py  naiveInference_loop.py  naiveInference_main.py  naiveInference_np.py  naiveInference_score.py  raw_data.csv  result.csv
Code/scripts/: builtin-collection.org  count_methods.py  ediff_txts.el  get_snippets.el  navigate_callgraph.hy  navigate_lookup.el  process-builtin-collections.hy  regression-test.hy  scrape-oracle-docs.hy  transfer_builtin_collection_org_to_ml.el
Code/swan_clone/: swan_clone.hy
Documentation/: SpecHunter_Static_Analysis.md
My-Papers/AutoSpec/: paper.tex
My-Papers/SpecHunter/: .gitignore  approach_details.tex  evaluation.tex  introduction.tex  overview.tex  paper.tex  related_work.tex
Reading-List/: Papers_Catalogue.org  related_works.md
(+217 files in other folders)
