(* -*- tuareg -*- *)

let is_yes = String.equal "yes"

let is_empty = String.equal ""

let clang = is_yes "no"

let java = is_yes "yes"

let facebook = is_yes "no"

let extra_cflags = if is_empty "" then [] else [""]

let repl =
  {|(library
 (name Repl)
 (public_name infer.Repl)
 (flags
  (:standard -open Core -open IStdlib -open IStd -open IBase -open IR -open Backend -open Integration -open Biabduction -open TestDeterminators -open ASTLanguage -open JavaFrontend -open Checkers -open SpecHunter))
 (libraries base64 core ocamlgraph IStdlib ATDGenerated IBase IR Absint Integration
            Biabduction BO Pulselib Backend Checkers SpecHunter)
 (preprocess
  (pps ppx_compare ppx_deriving.show)))|}


let documentation = {|(documentation
 (package infer))|}

;;
Jbuild_plugin.V1.send (String.concat "\n" [repl; documentation])
