(library
 (name SpecHunter)
 (public_name infer.SpecHunter)
 (flags
  (:standard -open Core -open OpenSource -open IR -open IStdlib -open IStd
    -open ATDGenerated -open IBase -open Absint -open Biabduction -open BO
    -open Pulselib -open Backend -open Checkers))
 (libraries base64 core ocamlgraph IStdlib ATDGenerated IBase IR Absint
            Biabduction BO Pulselib Backend Checkers)
 (preprocess
  (pps ppx_compare ppx_deriving.show)))

(documentation
 (package infer)
 ; (mld_files SpecHunter)
)
