(library
 (name SpecHunter)
 (public_name infer.SpecHunter)
 (flags
  (:standard -open Core -open OpenSource -open IR -open IStdlib -open IStd
    -open ATDGenerated -open IBase -open Absint -open Biabduction -open BO
    -open Pulselib -open Checkers -open Backend))
 (libraries yojson base64 core ocamlgraph IStdlib ATDGenerated IBase IR Absint
            Biabduction BO Pulselib Checkers Backend ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_compare ppx_deriving.show ppx_deriving_yojson)))

(documentation
 (package infer))
