(library
 (name Swan)
 (public_name infer.Swan)
 (flags
  (:standard -open Core -open OpenSource -open IR -open IStdlib -open IStd
    -open ATDGenerated -open IBase -open Absint -open Biabduction -open BO
    -open Pulselib -open Backend -open Checkers -open Csv))
 (libraries base64 core ocamlgraph IStdlib ATDGenerated IBase IR Absint
            Biabduction BO Pulselib Backend Checkers csv)
 (preprocess
  (pps ppx_compare ppx_deriving.show)))

(documentation
 (package infer))
